--- a/package.json
+++ b/package.json
@@ -6,18 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "server": "json-server -d 750 -w -p 3333 ./server.js"
+    "server": "json-server -d 750 -w -p 3333 ./server.js",
+    "buildanalyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^12.1.0",
+    "lodash": "^4.17.21",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-virtualized": "^9.22.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.180",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
     "@types/react-virtualized": "^9.21.20",
+    "cross-env": "^7.0.3",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
     "json-server": "^0.17.0",
